--- a/src/fetch/Makefile
+++ b/src/fetch/Makefile
@@ -1,5 +1,5 @@
-SCRIPTS=opnsense-fetch.sh
-MAN=	opnsense-fetch.8
+SCRIPTS=comsecurity-fetch.sh
+MAN=	comsecurity-fetch.8
 
 LOCALBASE?=${DESTDIR}/usr/local
 PREFIX?=${LOCALBASE}
