--- a/src/patch/Makefile
+++ b/src/patch/Makefile
@@ -1,5 +1,5 @@
-SCRIPTS=opnsense-patch.sh
-MAN=	opnsense-patch.8
+SCRIPTS=comsecurity-patch.sh
+MAN=	comsecurity-patch.8
 
 LOCALBASE?=${DESTDIR}/usr/local
 PREFIX?=${LOCALBASE}
