--- a/src/sign/Makefile
+++ b/src/sign/Makefile
@@ -1,5 +1,5 @@
-SCRIPTS=opnsense-sign.sh
-MAN=	opnsense-sign.8
+SCRIPTS=comsecurity-sign.sh
+MAN=	comsecurity-sign.8
 
 LOCALBASE?=${DESTDIR}/usr/local
 PREFIX?=${LOCALBASE}
