--- a/src/update/comsecurity-update.sh.in
+++ b/src/update/comsecurity-update.sh.in
@@ -32,16 +32,16 @@ if [ "$(id -u)" != "0" ]; then
 	exit 1
 fi
 
-CONFIGFILE="/usr/local/etc/opnsense-update.conf"
+CONFIGFILE="/usr/local/etc/comsecurity-update.conf"
 SIG_KEY="^[[:space:]]*signature_type:[[:space:]]*"
 URL_KEY="^[[:space:]]*url:[[:space:]]*"
-VERSIONDIR="/usr/local/opnsense/version"
-WORKPREFIX="/var/cache/opnsense-update"
+VERSIONDIR="/usr/local/comsecurity/version"
+WORKPREFIX="/var/cache/comsecurity-update"
 REPOSDIR="/usr/local/etc/pkg/repos"
 DEBUGDIR="/usr/lib/debug"
 KERNELDIR="/boot/kernel"
 TEE="/usr/bin/tee -a"
-PRODUCT="OPNsense"
+PRODUCT=".Com Security"
 PKG="pkg-static"
 RELEASE="%%RELEASE%%"
 
@@ -130,7 +130,7 @@ mirror_abi()
 		DIR="snapshots"
 	fi
 
-	ABI=$(opnsense-verify -a)
+	ABI=$(comsecurity-verify -a)
 
         if [ "${OPT}" = "pin" ]; then
 		# main archtecture to guarantee aux set fetch success
@@ -190,7 +190,7 @@ empty_cache()
 flush_temporary()
 {
 	# remove our stale pyc files not handled by pkg
-	find /usr/local/opnsense -type f -name "*.pyc" -delete
+	find /usr/local/comsecurity -type f -name "*.pyc" -delete
 
 	for DIR in /boot /usr/libexec/bsdinstall /usr/local; do
 		# remove spurious files from pkg
@@ -533,7 +533,7 @@ elif [ "${DO_MIRROR}" = "-X" ]; then
 		fi
 	fi
 	URL=$(mirror_abi pin)
-	echo ${URL%/*}/$(opnsense-version -x)
+	echo ${URL%/*}/$(comsecurity-version -x)
 	exit 0
 elif  [ -n "${DO_ORIGIN}" ]; then
 	# only print repository configuration
@@ -647,7 +647,7 @@ if [ -n "${DO_CHECK}" ]; then
 
 	# non-upgrade compare operations can be done now when not forced
 	if [ -n "${DO_TYPE}" ]; then
-		if [ "$(opnsense-version -n)" != "${DO_TYPE#"-t "}" ]; then
+		if [ "$(comsecurity-version -n)" != "${DO_TYPE#"-t "}" ]; then
 			exit 0
 		fi
 	fi
@@ -709,7 +709,7 @@ elif [ -n "${DO_LOCAL}" ]; then
 fi
 
 if [ "${DO_PKGS}" = "-p" -a -z "${DO_UPGRADE}${DO_SIZE}" ]; then
-	CORE=$(opnsense-version -n)
+	CORE=$(comsecurity-version -n)
 
 	# clean up deferred sets that could be there
 	rm -rf ${PENDINGDIR}/packages-*
@@ -733,7 +733,7 @@ if [ "${DO_PKGS}" = "-p" -a -z "${DO_UPGRADE}${DO_SIZE}" ]; then
 
 	if [ -n "${DO_BASE}${DO_KERNEL}${DO_TYPE}" ]; then
 		# script may have changed, relaunch...
-		opnsense-update ${DO_BASE} ${DO_KERNEL} ${DO_LOCAL} \
+		comsecurity-update ${DO_BASE} ${DO_KERNEL} ${DO_LOCAL} \
 		    ${DO_FORCE} ${DO_RELEASE} ${DO_TYPE} ${DO_DEFAULTS} \
 		    ${DO_MIRRORABI} ${DO_MIRRORDIR} ${DO_MIRRORURL} \
 		    ${DO_ABI} ${DO_VERBOSE} ${DO_CLEAN}
@@ -744,7 +744,7 @@ if [ "${DO_PKGS}" = "-p" -a -z "${DO_UPGRADE}${DO_SIZE}" ]; then
 fi
 
 if [ -n "${DO_TYPE}" ]; then
-	OLD=$(opnsense-version -n)
+	OLD=$(comsecurity-version -n)
 	NEW=${DO_TYPE#"-t "}
 
 	if [ "${OLD}" != "${NEW}" -o -n "${DO_FORCE}" ]; then
@@ -837,9 +837,9 @@ exit_msg()
 
 fetch_set()
 {
-	STAGE1="opnsense-fetch -T 30 -q -o ${WORKDIR}/${1}.sig ${MIRROR}/${1}.sig"
-	STAGE2="opnsense-fetch -T 30 -q -o ${WORKDIR}/${1} ${MIRROR}/${1}"
-	STAGE3="opnsense-verify -q ${WORKDIR}/${1}"
+	STAGE1="comsecurity-fetch -T 30 -q -o ${WORKDIR}/${1}.sig ${MIRROR}/${1}.sig"
+	STAGE2="comsecurity-fetch -T 30 -q -o ${WORKDIR}/${1} ${MIRROR}/${1}"
+	STAGE3="comsecurity-verify -q ${WORKDIR}/${1}"
 
 	if [ -n "${DO_LOCAL}" ]; then
 		# already fetched, just test
@@ -974,7 +974,7 @@ register_pkgs()
 	# We can't recover from this replacement, but
 	# since the manual says we require a reboot
 	# after `-P', it is to be considered a feature.
-	sed -i '' '/'"${URL_KEY}"'/s/".*/"file:\/\/\/var\/cache\/opnsense-update\/.sets.pending\/packages-'"${RELEASE}"'\",/' ${ORIGIN}
+	sed -i '' '/'"${URL_KEY}"'/s/".*/"file:\/\/\/var\/cache\/comsecurity-update\/.sets.pending\/packages-'"${RELEASE}"'\",/' ${ORIGIN}
 
 	if [ -n "${DO_INSECURE}" ]; then
 		# Insecure meant we didn't have any sets signatures,
